# Feed

./: .dockerignore  .gitignore  BUGS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT.md  README.md  TASKS.md  TICKETS.md  TODO.md  app-review.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/plans/: alright-now-let-s-do-snug-quail.md  cross-platform-support-kmp.md  feed-management-ui-todo-item-3.md
.github/: dependabot.yml
.github/workflows/: android.yml  docker.yml  kotlin.yml  rust.yml
app/: build.gradle.kts  keystore.properties.example
assets/: notes.txt
assets/feed-mark/: README.md  generate.mjs  package.json
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: run-docker-test.sh  server-build.sh  shot-android.sh  shot-ref.sh  shot-web.sh  test-counts.sh  test-failures.sh  test-run.sh  version.sh
scripts/shots/: SCENARIOS.md  package-lock.json  package.json  ref-shots.mjs  seed.sh  web-shots.mjs
server/: .gitignore  API_DOCUMENTATION.md  Cargo.toml  README.md  config.docker.example.toml  config.example.toml
server/src/: config.rs  config_tests.rs  db.rs  db_tests.rs  fetcher.rs  fetcher_tests.rs  fetcher_tests_simple.rs  logging.rs  main.rs  metrics.rs  opml_tests.rs  rate_limit.rs  scheduler.rs  scheduler_tests.rs  scheduler_tests_alternative.rs  scheduler_tests_working.rs  settings.rs  simple_db_tests.rs  test_utils.rs  webhook.rs
server/src/api/: error.rs  handlers.rs  mod.rs  types.rs
server/testdata/: feedly.opml
shared/: build.gradle.kts
spec/: API_DOCUMENTATION.md  FEATURES.md  README.md  VISUAL_SPEC.md
spec/plans/: alright-let-s-get-rid-generic-scone.md  alright-now-let-s-do-snug-quail-manual-review.md  android-logout-should-wipe-transient-swan.md  article-density-implementation-we-streamed-quiche.md  article-pagination-page-follow-2026-06-24.md  cross-platform-support-kmp.md  e2e-test-catalog-manual-review-feedback.md  edge-case-visuals-review-fixups.md  feed-management-ui-todo-item-3.md  fetch-and-retention-policy.md  fix-article-list-empty-after-subscription-click.md  fix-claude-background-approval-prompts.md  i-have-dropped-an-gleaming-rabin.md  i-have-recently-added-lazy-dewdrop.md  i-was-playing-a-radiant-swan.md  implement-ticket-16-curried-tarjan.md  implement-ticket-17-mellow-corbato.md  let-s-tackle-ticket-number-functional-dewdrop.md  local-mirror-sync-95.md  look-at-the-last-partitioned-scroll.md  new-design-rollout-implementation-plan.md  new-design-rollout-progress-log.md  observability-story-ticket-74.md  opml-import-e2e-verify-steady-bramble.md  read-spec-story-board-feed-icon-set-htmd-abundant-fountain.md  rename-spec-plans-files.md  review-of-task-46-spec-updates.md  settings-ui-refresh-look-radiant-quiche.md  show-me-the-features-md-tranquil-boot.md  spec-features-md-draft-review-v2.md  storyboard-accuracy-audit-2026-06-21.md  test-environment-hardening.md  ticket-10-snappy-sifakis.md  ticket-40-let-s-implement-enchanted-hennessy.md  ticket-75-design-accuracy-sweep.md  ticket-75-screenshot-tooling.md  (+4 more)
web/: build.gradle.kts
(+274 files in other folders)
