[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version="1.88.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
feed-rs = "1.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
axum = "0.7"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-cron-scheduler = "0.10"
chrono = "0.4"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.100"
directories = "4"
argon2 = { version = "0.5" }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
