[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version="1.91.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
feed-rs = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
axum = "0.8"
hyper = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-cron-scheduler = "0.13"
chrono = "0.4"
jsonwebtoken = "9"
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
time = "0.3"
headers = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
directories = "6"
argon2 = { version = "0.5", features = ["std"] }
hex = "0.4"
tower-http = { version = "0.7", features = ["trace", "timeout", "fs"] }
opml = "1"
hmac = "0.13"
sha2 = "0.11"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
mockall = "0.15"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
test-case = "3.3"
proptest = "1.5"
criterion = "0.5"
tokio-test = "0.4"
serial_test = "3.1"
tracing-test = "0.2"
